# sdks

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRE-COMMIT-SETUP.md  README.md  SECURITY.md
.claude/: settings.local.json
.claude/commands/: create_plan.md  implement_plan.md  parallel_work_standard.md  validate_plan.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: android-app-build.yml  android-app-lint.yml  android-app.yml  android-sdk-build.yml  android-sdk-lint.yml  android-sdk.yml  ios-app-build.yml  ios-app-lint.yml  ios-app.yml  ios-sdk-build.yml  ios-sdk-lint.yml  ios-sdk.yml
docs/: SETUP_PRECOMMIT.md  TODO_POLICY.md
docs/screenshots/: README.md
examples/: README.md
examples/android/RunAnywhereAI/: .gitignore  LOCAL_LLM_README.md  build.gradle.kts  detekt-config.yml  detekt.yml  (+1 more)
examples/android/RunAnywhereAI/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  mlc_llm_jni.cpp
examples/web/: README.md
scripts/: check-todos-hook.sh  lint-all.sh  lint-android.sh  lint-ios.sh  security-check.sh
sdk/runanywhere-android/: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  README.md  build.gradle.kts  detekt.yml  lint-baseline.xml  lint.xml  settings.gradle.kts
sdk/runanywhere-swift/: .swiftlint.yml  Package.resolved  Package.swift  README.md
sdk/runanywhere-web/: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-integration.js  tsconfig.base.json  tsconfig.json  vite.config.ts
(+1066 files in other folders)
